# OOPLab1

./: CMakeLists.txt
OOPLab1/: Button.h  Button.hpp  CMakeLists.txt  Color.cpp  Color.h  Enums.h  Functions.cpp  Functions.h  Functions.hpp  GUIInterface.cpp  GUIInterface.h  GUIInterface.hpp  OOPLab1.cpp  TPoint.cpp  TPoint.h  TPoint.hpp  Task.h
